--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,10 @@ dependencies:
     sdk: flutter
 
   # Utility Packages
-
+  http: ^1.5.0
+  intl: ^0.20.2
+  logger: ^2.6.2
+  url_launcher: ^6.3.2
 
   # Icons
   iconsax: ^0.0.8
@@ -22,9 +25,8 @@ dependencies:
 
   # State Management
   get: ^4.7.2
-
+  get_storage: ^2.1.1
   # Product Specific
-
 
 #-------------------- ./ PACKAGES END ---------------#
 dev_dependencies:
