--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,8 @@ dependencies:
   intl: ^0.20.2
   logger: ^2.6.2
   url_launcher: ^6.3.2
+  flutter_native_splash: ^2.4.7
+  smooth_page_indicator: ^1.2.1
 
   # Icons
   iconsax: ^0.0.8
